Fixed Responsive Layout

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap");
 *,
 *::before,
@@ -26,14 +25,15 @@ p {
 
 p {
   font-size: 1.25rem;
+  font-size: clamp(1.25rem, 3vw, 1.5rem);
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: clamp(3rem, 5vw, 4rem);
 }
 
 h2 {
-  font-size: 1.75rem;
+  font-size: clamp(1.25rem, 4vw, 1.5rem);
 }
 
 button {
@@ -46,8 +46,7 @@ button {
 }
 
 .container-fluid {
-  padding-left: 80px;
-  padding-right: 80px;
+  padding: 0 1rem;
 }
 
 .navbar-toggler {
@@ -78,69 +77,23 @@ button {
 }
 
 .hero-content {
-  padding-top: 60px;
   margin: 0 auto;
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
-}
-
-.hero-content .logo {
-  opacity: 0;
-  -webkit-animation: fadeIn 750ms ease-in forwards;
-          animation: fadeIn 750ms ease-in forwards;
+  max-width: 100%;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-top: 5em;
 }
 
 .hero-subtitle {
   font-family: "Oxygen Mono", monospace;
-  position: relative;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.hero-subtitle::before, .hero-subtitle::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.hero-subtitle::before {
-  background: #0c0d17;
-  -webkit-animation: typewriter 3s steps(34) 750ms forwards;
-          animation: typewriter 3s steps(34) 750ms forwards;
-}
-
-.hero-subtitle::after {
-  width: 0.125em;
-  background: #fff;
-  -webkit-animation: typewriter 3s steps(34) 750ms forwards, blink 1s steps(34) infinite;
-          animation: typewriter 3s steps(34) 750ms forwards, blink 1s steps(34) infinite;
-}
-
-.hero-buttons {
-  margin-top: 4em;
-  margin-bottom: 4em;
-}
-
-.hero-buttons .btn {
-  opacity: 0;
-  -webkit-transform: translateY(3rem);
-          transform: translateY(3rem);
+  margin-top: 1rem;
 }
 
 .hero-buttons .btn:first-child {
   margin-right: 3em;
-  -webkit-animation: fadeIn 750ms ease-in 3750ms forwards;
-          animation: fadeIn 750ms ease-in 3750ms forwards;
-}
-
-.hero-buttons .btn:nth-child(2) {
-  -webkit-animation: fadeIn 750ms ease-in 4500ms forwards;
-          animation: fadeIn 750ms ease-in 4500ms forwards;
 }
 
 .btn {
@@ -178,24 +131,17 @@ button {
   color: #fff;
 }
 
+.btn .btn-inner .btn-link img {
+  width: 24px;
+  height: 24px;
+}
+
 .scroll-icon {
   max-width: 48px;
   margin: auto auto 10px auto;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-}
-
-.scroll-icon .animated-bounce {
-  opacity: 0;
-  -webkit-animation: fadeIn 750ms ease-in 5250ms forwards, bounce 1.5s ease-in-out 3.75s infinite alternate;
-          animation: fadeIn 750ms ease-in 5250ms forwards, bounce 1.5s ease-in-out 3.75s infinite alternate;
-}
-
-.scroll-icon .arrow-svg-container {
-  opacity: 0;
-  max-width: 24px;
-  -webkit-animation: fadeIn 750ms ease-in 5250ms forwards;
-          animation: fadeIn 750ms ease-in 5250ms forwards;
+  display: none;
 }
 
 .about-section {
@@ -206,7 +152,7 @@ button {
 
 .about-section .instagram-feed {
   width: 100%;
-  padding: 3em;
+  padding: 2em 0 2em 0;
 }
 
 .about-section .about-title {
@@ -216,8 +162,6 @@ button {
 
 .about-section .about-text {
   text-align: justify;
-  padding: 0 2em;
-  border-left: 1px solid #fff;
 }
 
 .contact-title {
@@ -233,6 +177,10 @@ button {
   padding-top: 4em;
   padding-bottom: 2em;
   text-align: center;
+}
+
+form .btn {
+  width: 170px;
 }
 
 .form-control {
@@ -272,18 +220,132 @@ button {
 
 .copyright-text {
   font-size: 1rem;
-  margin-top: 1em;
   margin-left: 0.5em;
   color: #c5c5c5;
 }
 
 .footer-socials {
-  margin-right: 0.5em;
-  margin-top: 0.5em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .footer-socials a:first-child {
   margin-right: 1em;
+}
+
+@media (min-width: 768px) {
+  .container-fluid {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+  .copyright-text {
+    margin-top: 1em;
+  }
+  .hero-content {
+    padding-top: 6em;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar {
+    opacity: 0;
+    -webkit-animation: fadeIn 750ms ease-in 5250ms forwards;
+            animation: fadeIn 750ms ease-in 5250ms forwards;
+  }
+  .logo {
+    opacity: 0;
+    -webkit-animation: fadeIn 750ms ease-in forwards;
+            animation: fadeIn 750ms ease-in forwards;
+  }
+  .hero-subtitle {
+    position: relative;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .hero-subtitle::before, .hero-subtitle::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+  .hero-subtitle::before {
+    background: #0c0d17;
+    -webkit-animation: typewriter 3s steps(34) 750ms forwards;
+            animation: typewriter 3s steps(34) 750ms forwards;
+  }
+  .hero-subtitle::after {
+    width: 0.125em;
+    background: #fff;
+    -webkit-animation: typewriter 3s steps(34) 750ms forwards, blink 1s steps(34) infinite;
+            animation: typewriter 3s steps(34) 750ms forwards, blink 1s steps(34) infinite;
+  }
+  .hero-buttons .btn {
+    opacity: 0;
+    -webkit-transform: translateY(3rem);
+            transform: translateY(3rem);
+  }
+  .hero-buttons .btn:first-child {
+    margin-right: 3em;
+    -webkit-animation: fadeIn 750ms ease-in 3750ms forwards;
+            animation: fadeIn 750ms ease-in 3750ms forwards;
+  }
+  .hero-buttons .btn:nth-child(2) {
+    -webkit-animation: fadeIn 750ms ease-in 4500ms forwards;
+            animation: fadeIn 750ms ease-in 4500ms forwards;
+  }
+  .scroll-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .scroll-icon .animated-bounce {
+    opacity: 0;
+    -webkit-animation: fadeIn 750ms ease-in 5250ms forwards, bounce 1.5s ease-in-out 3.75s infinite alternate;
+            animation: fadeIn 750ms ease-in 5250ms forwards, bounce 1.5s ease-in-out 3.75s infinite alternate;
+  }
+  .scroll-icon .arrow-svg-container {
+    opacity: 0;
+    max-width: 24px;
+    -webkit-animation: fadeIn 750ms ease-in 5250ms forwards;
+            animation: fadeIn 750ms ease-in 5250ms forwards;
+  }
+  .about-text {
+    border-left: 1px solid #fff;
+    padding: 0 2em;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .instagram-feed {
+    border-bottom: 2px solid #fff;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .footer-socials {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    margin-top: 1em;
+    margin-left: 0.5em;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .hero-buttons .btn:first-child {
+    margin-right: 3em;
+  }
 }
 
 @-webkit-keyframes fadeIn {
