--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
+// Bootstrap Imports
+@import "../node_modules/bootstrap/scss/_functions.scss";
+@import "../node_modules/bootstrap/scss/_variables.scss";
+@import "../node_modules/bootstrap/scss/mixins/_breakpoints.scss";
+
+// Font Imports
 @import url("https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap");
 
 // Color Variables
@@ -37,14 +42,15 @@ p {
 
 p {
 	font-size: 1.25rem;
+	font-size: clamp(1.25rem, 3vw, 1.5rem);
 }
 
 h1 {
-	font-size: 4rem;
+	font-size: clamp(3rem, 5vw, 4rem);
 }
 
 h2 {
-	font-size: 1.75rem;
+	font-size: clamp(1.25rem, 4vw, 1.5rem);
 }
 
 button {
@@ -57,8 +63,7 @@ button {
 }
 
 .container-fluid {
-	padding-left: 80px;
-	padding-right: 80px;
+	padding: 0 1rem;
 }
 
 .navbar-toggler {
@@ -88,59 +93,22 @@ button {
 }
 
 .hero-content {
-	padding-top: 60px;
 	margin: 0 auto;
 	flex: 1 0 auto;
-
-	.logo {
-		opacity: 0;
-		animation: fadeIn $fade-in-speed ease-in forwards;
-	}
+	max-width: 100%;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	padding-top: 5em;
 }
 
 .hero-subtitle {
 	font-family: "Oxygen Mono", monospace;
-	position: relative;
-	width: max-content;
-
-	&::before,
-	&::after {
-		content: "";
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-	}
-
-	&::before {
-		background: $bg;
-		animation: typewriter $typewriterSpeed steps($typewriterCharacters) $fade-in-speed forwards;
-	}
-
-	&::after {
-		width: 0.125em;
-		background: #fff;
-		animation: typewriter $typewriterSpeed steps($typewriterCharacters) $fade-in-speed forwards, blink 1s steps($typewriterCharacters) infinite;
-	}
+	margin-top: 1rem;
 }
 
 .hero-buttons {
-	margin-top: 4em;
-	margin-bottom: 4em;
-
-	.btn {
-		opacity: 0;
-		transform: translateY(3rem);
-	}
-
 	.btn:first-child {
 		margin-right: 3em;
-		animation: fadeIn $fade-in-speed ease-in $fade-in-speed + $typewriterSpeed forwards;
-	}
-
-	.btn:nth-child(2) {
-		animation: fadeIn $fade-in-speed ease-in 2 * $fade-in-speed + $typewriterSpeed forwards;
 	}
 }
 
@@ -169,6 +137,11 @@ button {
 			&:focus {
 				color: #fff;
 			}
+
+			img {
+				width: 24px;
+				height: 24px;
+			}
 		}
 	}
 }
@@ -177,17 +150,7 @@ button {
 	max-width: 48px;
 	margin: auto auto 10px auto;
 	flex-shrink: 0;
-
-	.animated-bounce {
-		opacity: 0;
-		animation: fadeIn $fade-in-speed ease-in 3 * $fade-in-speed + $typewriterSpeed forwards, bounce 1.5s ease-in-out $typewriterSpeed + $fade-in-speed infinite alternate;
-	}
-
-	.arrow-svg-container {
-		opacity: 0;
-		max-width: 24px;
-		animation: fadeIn $fade-in-speed ease-in 3 * $fade-in-speed + $typewriterSpeed forwards;
-	}
+	display: none;
 }
 
 .about-section {
@@ -197,7 +160,7 @@ button {
 
 	.instagram-feed {
 		width: 100%;
-		padding: 3em;
+		padding: 2em 0 2em 0;
 	}
 
 	.about-title {
@@ -207,8 +170,6 @@ button {
 
 	.about-text {
 		text-align: justify;
-		padding: 0 2em;
-		border-left: 1px solid #fff;
 	}
 }
 
@@ -225,6 +186,12 @@ button {
 	padding-top: 4em;
 	padding-bottom: 2em;
 	text-align: center;
+}
+
+form {
+	.btn {
+		width: 170px;
+	}
 }
 
 .form-control {
@@ -263,20 +230,133 @@ button {
 
 .copyright-text {
 	font-size: 1rem;
-	margin-top: 1em;
 	margin-left: 0.5em;
 	color: #c5c5c5;
 }
 
 .footer-socials {
-	margin-right: 0.5em;
-	margin-top: 0.5em;
+	justify-content: center;
 
 	a:first-child {
 		margin-right: 1em;
 	}
 }
 
+// Media Querrys
+@include media-breakpoint-up(md) {
+	.container-fluid {
+		padding-left: 80px;
+		padding-right: 80px;
+	}
+
+	.copyright-text {
+		margin-top: 1em;
+	}
+
+	.hero-content {
+		padding-top: 6em;
+	}
+}
+
+@include media-breakpoint-up(lg) {
+	.navbar {
+		opacity: 0;
+		animation: fadeIn $fade-in-speed ease-in 3 * $fade-in-speed + $typewriterSpeed forwards;
+	}
+
+	.logo {
+		opacity: 0;
+		animation: fadeIn $fade-in-speed ease-in forwards;
+	}
+
+	.hero-subtitle {
+		position: relative;
+		width: max-content;
+
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+		}
+
+		&::before {
+			background: $bg;
+			animation: typewriter $typewriterSpeed steps($typewriterCharacters) $fade-in-speed forwards;
+		}
+
+		&::after {
+			width: 0.125em;
+			background: #fff;
+			animation: typewriter $typewriterSpeed steps($typewriterCharacters) $fade-in-speed forwards, blink 1s steps($typewriterCharacters) infinite;
+		}
+	}
+
+	.hero-buttons {
+		.btn {
+			opacity: 0;
+			transform: translateY(3rem);
+		}
+
+		.btn:first-child {
+			margin-right: 3em;
+			animation: fadeIn $fade-in-speed ease-in $fade-in-speed + $typewriterSpeed forwards;
+		}
+
+		.btn:nth-child(2) {
+			animation: fadeIn $fade-in-speed ease-in 2 * $fade-in-speed + $typewriterSpeed forwards;
+		}
+	}
+
+	.scroll-icon {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		.animated-bounce {
+			opacity: 0;
+			animation: fadeIn $fade-in-speed ease-in 3 * $fade-in-speed + $typewriterSpeed forwards, bounce 1.5s ease-in-out $typewriterSpeed + $fade-in-speed infinite alternate;
+		}
+
+		.arrow-svg-container {
+			opacity: 0;
+			max-width: 24px;
+			animation: fadeIn $fade-in-speed ease-in 3 * $fade-in-speed + $typewriterSpeed forwards;
+		}
+	}
+
+	.about-text {
+		border-left: 1px solid #fff;
+		padding: 0 2em;
+	}
+}
+
+@include media-breakpoint-down(lg) {
+	.instagram-feed {
+		border-bottom: 2px solid #fff;
+	}
+}
+
+@include media-breakpoint-down(md) {
+	.footer-socials {
+		justify-content: start;
+		margin-top: 1em;
+		margin-left: 0.5em;
+	}
+}
+
+@include media-breakpoint-down(sm) {
+	.hero-buttons {
+		.btn:first-child {
+			margin-right: 3em;
+		}
+	}
+}
+
+// Animations
 @keyframes fadeIn {
 	to {
 		opacity: 1;
